--- a/projects.html
+++ b/projects.html
@@ -1,280 +1,149 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Created By CodingNepal -->
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+
+    <link rel="stylesheet" href="css/projects.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
   </head>
   <body>
-    <style>
-      .container {
-        border-radius: 0 0 100px 0;
-        background: linear-gradient(180deg, #2f8280 0%, #1d7775 100%);
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        align-items: end;
-        padding: 0 61px 80px;
-      }
-
-      @media (max-width: 991px) {
-        .container {
-          max-width: 100%;
-          padding: 0 20px;
-        }
-      }
-
-      .logo {
-        aspect-ratio: 1.2;
-        object-fit: auto;
-        object-position: center;
-        width: 223px;
-        align-self: start;
-        z-index: 10;
-        max-width: 100%;
-      }
-
-      .nav {
-        border-radius: 100px;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-        background-color: #1d7775;
-        z-index: 10;
-        display: flex;
-        gap: 20px;
-        font-size: 20px;
-        color: #fff;
-        font-weight: 400;
-        white-space: nowrap;
-        line-height: 120%;
-        margin: -151px 84px 0 0;
-        padding: 25px 80px;
-      }
-
-      @media (max-width: 991px) {
-        .nav {
-          margin-right: 10px;
-          flex-wrap: wrap;
-          white-space: initial;
-          padding: 0 20px;
-        }
-      }
-
-      .nav-item {
-        text-align: center;
-        font-family: Space Grotesk, sans-serif;
-      }
-
-      .nav-item-grow {
-        font-family: Space Grotesk, sans-serif;
-        flex-grow: 1;
-        flex-basis: auto;
-      }
-
-      .image-shadow {
-        aspect-ratio: 0.52;
-        object-fit: auto;
-        object-position: center;
-        width: 197px;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25) inset;
-        border: 1px solid #000;
-        margin-top: -68px;
-        max-width: 100%;
-      }
-
-      .image-grid {
-        z-index: 10;
-        width: 411px;
-        max-width: 100%;
-        margin: -292px 206px 0 0;
-        padding: 0 1px;
-      }
-
-      @media (max-width: 991px) {
-        .image-grid {
-          margin: -200px 10px 0 0;
-        }
-      }
-
-      .image-row {
-        gap: 20px;
-        display: flex;
-      }
-
-      @media (max-width: 991px) {
-        .image-row {
-          flex-direction: column;
-          align-items: stretch;
-          gap: 0;
-        }
-      }
-
-      .image-col {
-        display: flex;
-        flex-direction: column;
-        line-height: normal;
-        width: 50%;
-        margin-left: 0;
-      }
-
-      @media (max-width: 991px) {
-        .image-col {
-          width: 100%;
-        }
-      }
-
-      .image-border-white {
-        aspect-ratio: 0.52;
-        object-fit: auto;
-        object-position: center;
-        width: 197px;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25) inset;
-        border: 1px solid #fff;
-        max-width: 100%;
-      }
-
-      .image-margin-top {
-        margin-top: 102px;
-        flex-grow: 1;
-      }
-
-      @media (max-width: 991px) {
-        .image-margin-top {
-          margin-top: 40px;
-        }
-      }
-
-      .image-margin-left {
-        margin-left: 20px;
-      }
-
-      @media (max-width: 991px) {
-        .image-margin-top-small {
-          margin-top: 16px;
-        }
-      }
-
-      .hero-content {
-        align-self: start;
-        z-index: 10;
-        display: flex;
-        width: 555px;
-        max-width: 100%;
-        flex-direction: column;
-        margin: -387px 0 33px 116px;
-      }
-
-      @media (max-width: 991px) {
-        .hero-content {
-          margin-top: -200px;
-        }
-      }
-
-      .hero-title {
-        color: #fffdfd;
-        text-align: center;
-        letter-spacing: -1.08px;
-        font: 500 54px/50px Space Grotesk, -apple-system, Roboto, Helvetica,
-          sans-serif;
-      }
-
-      @media (max-width: 991px) {
-        .hero-title {
-          max-width: 100%;
-          font-size: 40px;
-          line-height: 41px;
-        }
-      }
-
-      .hero-description {
-        color: #fff;
-        letter-spacing: -0.58px;
-        text-transform: lowercase;
-        margin-top: 29px;
-        font: 347 29px/40px Space Grotesk, -apple-system, Roboto, Helvetica,
-          sans-serif;
-      }
-
-      @media (max-width: 991px) {
-        .hero-description {
-          max-width: 100%;
-        }
-      }
-
-      .arrow-icon {
-        aspect-ratio: 0.19;
-        object-fit: auto;
-        object-position: center;
-        width: 15px;
-        stroke-width: 2px;
-        stroke: #fff;
-        border: 2px solid #fff;
-        align-self: center;
-        margin-top: 30px;
-      }
-    </style>
-
-    <header class="container">
-      <img
-        src="https://cdn.builder.io/api/v1/image/assets/TEMP/b6dd555fff0e1aaa04cb78b5de702d624f2099bcbd9183a8c87b58d960d01881?apiKey=07656cc1070a4998b9b70b949180a7c6&"
-        alt="Logo"
-        class="logo"
-        loading="lazy"
-      />
-
-      <nav class="nav">
-        <a href="#" class="nav-item">About</a>
-        <a href="#" class="nav-item">Podcasts</a>
-        <a href="#" class="nav-item">Projects</a>
-        <a href="#" class="nav-item nav-item-grow">Appreciation</a>
-      </nav>
-
-      <img
-        src="https://cdn.builder.io/api/v1/image/assets/TEMP/3a1e3c162ac692ca14b9a53b97adbeda71c663826be2eb1896ff4112d6fff25a?apiKey=07656cc1070a4998b9b70b949180a7c6&"
-        alt="Shadow Image"
-        class="image-shadow"
-        loading="lazy"
-      />
-    </header>
-
-    <main>
-      <section class="image-grid">
-        <div class="image-row">
-          <div class="image-col">
-            <img
-              src="https://cdn.builder.io/api/v1/image/assets/TEMP/e0bef70d3bec1e1eaa6c1a964d91de2482a1cfa3cf621e29143e5b6c29990739?apiKey=07656cc1070a4998b9b70b949180a7c6&"
-              alt="Image"
-              class="image-border-white image-margin-top"
-              loading="lazy"
-            />
+    <div class="heroSection projects">
+      <div class="navigation">
+        <div class="mainNav">
+          <div class="logo">
+            <a href="index.html"
+              ><img class="logoIcon" src="/images/logo.png"
+            /></a>
           </div>
-          <div class="image-col image-margin-left">
-            <img
-              src="https://cdn.builder.io/api/v1/image/assets/TEMP/54a01e9cc55ee21056f5ba50f174b09e0118d5ba567040253db3992dc1f5c802?apiKey=07656cc1070a4998b9b70b949180a7c6&"
-              alt="Image"
-              class="image-border-white image-margin-top-small"
-              loading="lazy"
-            />
+          <div class="navItems">
+            <ul class="NavLinks">
+              <li class="nav_links"><a href="#aboutSection">About Us</a></li>
+              <li class="nav_links"><a href="podcasts.html">Podcasts</a></li>
+              <li class="nav_links"><a href="projects.html"> Projects</a></li>
+              <li class="nav_links"><a href="#">Appreciation</a></li>
+            </ul>
           </div>
         </div>
-      </section>
+      </div>
+      <div class="mainHero projHero">
+        <div class="projectsTitle">
+          <div class="title">What we've done</div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
+            modi dolorem quis quae animi nihil minus sed unde voluptas cumque.
+          </p>
+        </div>
+        <div class="projSlider">
+          <div class="slider owl-carousel">
+            <div class="card">
+              <div class="img">
+                <img src="images/project_img/v255_54.png" alt="" />
+              </div>
+              <div class="content">
+                <div class="title">Project title</div>
+                <!-- <-- <div class="sub-title">Graphic Designer</div> -- -->
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                  modi dolorem quis quae animi nihil minus sed unde voluptas
+                  cumque.
+                </p>
+                <div class="btn">
+                  <button>Read more</button>
+                </div>
+              </div>
+            </div>
 
-      <section class="hero-content">
-        <h1 class="hero-title">
-          Welcome to <br />
-          EHS Unplugged <br />
-          Podcast
-        </h1>
-        <p class="hero-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor
-        </p>
-        <img
-          src="https://cdn.builder.io/api/v1/image/assets/TEMP/15ac3a4c666103fd7e487efe0ce73d4878b98d5a8b3a182fba56417dd07f7f59?apiKey=07656cc1070a4998b9b70b949180a7c6&"
-          alt="Arrow Icon"
-          class="arrow-icon"
-          loading="lazy"
-        />
-      </section>
-    </main>
+            <div class="card">
+              <div class="img">
+                <img src="/images/project_img/v255_55.png" alt="" />
+              </div>
+              <div class="content">
+                <div class="title">Project title</div>
+                <!-- <-- <div class="sub-title">Web Developer</div> -- -->
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                  modi dolorem quis quae animi nihil minus sed unde voluptas
+                  cumque.
+                </p>
+                <div class="btn">
+                  <button>Read more</button>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="/images/project_img//v255_53.png" alt="" />
+              </div>
+              <div class="content">
+                <div class="title">Project title</div>
+                <!-- <-- <div class="sub-title">App Developer</div> -- -->
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                  modi dolorem quis quae animi nihil minus sed unde voluptas
+                  cumque.
+                </p>
+                <div class="btn">
+                  <button>Read more</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ==================================== -->
+    <div class="PodQuote projQuote">
+      <div class="projcards">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+      <div class="projcards">
+        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat”
+      </div>
+      <div class="projcards">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+    </div>
+    <!-- ====================================== -->
+    <div class="Footer">
+      <div class="contactSection">
+        <div class="Socials">
+          <div class="socials_icon"></div>
+          <div class="socials_icon"></div>
+          <div class="socials_icon"></div>
+        </div>
+        <div class="Contacts">
+          <div class="Mail">Lorem@ipsum.com</div>
+          <div class="Phone">+254-123-123-32</div>
+        </div>
+      </div>
+
+      <div class="Copyright">
+        <p>EHS Unplugged Podcast 2024</p>
+      </div>
+    </div>
+    <script>
+      $(".slider").owlCarousel({
+        loop: true,
+        autoplay: true,
+        autoplayTimeout: 4000, // 3000ms = 3s
+        autoplayHoverPause: true,
+        animateOut: "fadeOut", // Fade out animation
+        animateIn: "fadeIn", // Fade in animation
+        smartSpeed: 1000, // Transition speed in milliseconds (adjust as needed)
+        animateEasing: "easeInOut", // Easing function for the animation
+      });
+    </script>
   </body>
 </html>
