--- a/index.html
+++ b/index.html
@@ -72,29 +72,35 @@
 
     <!-- ======================== -->
     <div class="AboutSection" id="aboutSection">
-      <div class="AboutUs">
+      <div class="aboutUs">
         <div class="abt_title">About Us</div>
         <div class="abt_text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat
+            aliquip ex ea commodo consequat consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud.
           </p>
         </div>
 
-        <div class="abt_cta">Listen...</div>
+        <ul class="abt_cta">
+          <li><a href="podcasts.html">Listen</a></li>
+          <li><a href="projects.html">What we've done</a></li>
+          <li><a href="#">In the grapevine</a></li>
+        </ul>
       </div>
 
-      <div class="AboutQuote">
-        <div class="AbtqImg">
+      <div class="aboutQuote">
+        <div class="abtqImg">
           <!-- <img src="/images/v255_6.png" /> -->
         </div>
       </div>
     </div>
     <!-- ======================== -->
     <!-- <img class="QuoteBg" src="/images/v257_140.png" /> -->
-    <div class="PodQuote">
+    <div class="podQuote">
       <p>
         “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
