--- a/podcasts.html
+++ b/podcasts.html
@@ -1,59 +1,193 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <!-- Somehow I got an error, so I comment the title, just uncomment to show -->
-    <!-- <title>Owl-carousel Cards Slider | CodingNepal</title> -->
-    <link rel="stylesheet" href="/css/podcasts.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="css/podcasts.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
+    <title>Podcasts</title>
   </head>
   <body>
-    <div class="carousel-wrap">
-      <div class="owl-carousel">
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
-        <div class="item"><img src="http://placehold.it/150x150" /></div>
+    <div class="heroSection podcasts">
+      <div class="navigation">
+        <div class="mainNav">
+          <div class="logo">
+            <a href="index.html"
+              ><img class="logoIcon" src="/images/logo.png"
+            /></a>
+          </div>
+          <div class="navItems">
+            <ul class="NavLinks">
+              <li class="nav_links"><a href="#aboutSection">About Us</a></li>
+              <li class="nav_links"><a href="podcasts.html">Podcasts</a></li>
+              <li class="nav_links"><a href="projects.html"> Projects</a></li>
+              <li class="nav_links"><a href="#">Appreciation</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- ===================== -->
+      <div class="mainHero podHero">
+        <div class="podcastsTitle">
+          <div class="title">EHS Podcast series</div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
+          </p>
+        </div>
+        <div class="podContent">
+          <div class="podLists">
+            <!--  -->
+
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img src="/images/podcast_img/Episode 9.png" />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <!-- ----- -->
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img
+                    src="/images/podcast_img/Bold Podcast Instagram Post 04.png"
+                  />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <!-- ----- -->
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img src="/images/podcast_img/Episode 10.png" />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img src="/images/podcast_img/Episode 10.png" />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <!--  -->
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img src="/images/podcast_img/Episode 10.png" />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img src="/images/podcast_img//Episode 9.png" />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <!--  -->
+            <div class="podCard">
+              <div class="content">
+                <div class="imgBx">
+                  <img src="/images/podcast_img//Episode 9.png" />
+                </div>
+              </div>
+              <ul class="ctaIcons">
+                <h4>listen</h4>
+                <li class="cta_icon">
+                  <a href="">Apple Podcasts</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Spotify</a>
+                </li>
+                <li class="cta_icon">
+                  <a href="">Youtube</a>
+                </li>
+              </ul>
+            </div>
+            <!--  -->
+          </div>
+        </div>
       </div>
     </div>
-    <script>
-      $(".owl-carousel").owlCarousel({
-        loop: true,
-        margin: 10,
-        nav: true,
-        navText: [
-          "<i class='fa fa-caret-left'></i>",
-          "<i class='fa fa-caret-right'></i>",
-        ],
-        autoplay: true,
-        autoplayTimeout: 2000,
-        autoplayHoverPause: true,
-        responsive: {
-          0: {
-            items: 1,
-          },
-          600: {
-            items: 3,
-          },
-          1000: {
-            items: 5,
-          },
-        },
-      });
-    </script>
   </body>
 </html>
