--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
 
@@ -42,7 +41,7 @@
         </div>
         <div class="projSlider">
           <div class="slider owl-carousel">
-            <div class="card">
+            <div class="mainCard">
               <div class="img">
                 <img src="images/project_img/v255_54.png" alt="" />
               </div>
@@ -60,7 +59,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <div class="mainCard">
               <div class="img">
                 <img src="/images/project_img/v255_55.png" alt="" />
               </div>
@@ -77,7 +76,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="mainCard">
               <div class="img">
                 <img src="/images/project_img//v255_53.png" alt="" />
               </div>
