--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </p>
     </div>
     <!-- =============================== -->
-    <div class="Footer">
+    <div class="footer">
       <div class="contactSection">
         <div class="Socials">
           <div class="socials_icon"></div>
