--- a/podcasts.html
+++ b/podcasts.html
@@ -189,5 +189,32 @@
         </div>
       </div>
     </div>
+    <!-- ========================= -->
+    <div class="podQuote">
+      <p>
+        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat”
+      </p>
+    </div>
+    <!-- ================= -->
+    <div class="footer">
+      <div class="contactSection">
+        <div class="Socials">
+          <div class="socials_icon"></div>
+          <div class="socials_icon"></div>
+          <div class="socials_icon"></div>
+        </div>
+        <div class="Contacts">
+          <div class="Mail">Lorem@ipsum.com</div>
+          <div class="Phone">+254-123-123-32</div>
+        </div>
+      </div>
+
+      <div class="Copyright">
+        <p>EHS Unplugged Podcast 2024</p>
+      </div>
+    </div>
   </body>
 </html>
