--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="css/projects.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="css/main.css" rel="stylesheet" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -35,8 +35,8 @@
         <div class="projectsTitle">
           <div class="title">What we've done</div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
-            modi dolorem quis quae animi nihil minus sed unde voluptas cumque.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. modi
+            dolorem quis quae animi nihil minus sed unde voluptas cumque.
           </p>
         </div>
         <div class="projSlider">
@@ -115,7 +115,7 @@
       </div>
     </div>
     <!-- ====================================== -->
-    <div class="Footer">
+    <div class="footer">
       <div class="contactSection">
         <div class="Socials">
           <div class="socials_icon"></div>
@@ -132,6 +132,8 @@
         <p>EHS Unplugged Podcast 2024</p>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script>
       $(".slider").owlCarousel({
         loop: true,
